change bread to crowbar

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
-    <title>Single Piece of Bread</title>
+    <title>Crowbar</title>
 </head>
 <body>
-    <div id="toaster">
+    <div id="crowbar">
     </div>
 </body>
